<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.OcrActivity">

    <ImageView
        android:id="@+id/imageIv"
        android:layout_width="372dp"
        android:layout_height="275dp"
        android:contentDescription="@string/image_preview"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cameraBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageIv" />

    <Button
        android:id="@+id/galleryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/gallery"
        app:layout_constraintStart_toEndOf="@id/cameraBtn"
        app:layout_constraintTop_toTopOf="@id/cameraBtn" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="371dp"
        android:layout_height="316dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/copyBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraBtn"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/recognizedTextTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recognized_text_hint"
            android:textSize="16sp" />
    </ScrollView>

    <Button
        android:id="@+id/copyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/copy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@id/copyBtn"
        app:layout_constraintStart_toEndOf="@id/copyBtn"
        app:layout_constraintTop_toTopOf="@id/copyBtn" />

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="@id/saveBtn"
        app:layout_constraintStart_toEndOf="@id/saveBtn"
        app:layout_constraintTop_toTopOf="@id/saveBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--tools:context=".OcrActivity2">-->

<!--<TextView-->
<!--    android:id="@+id/recognizedText"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="0dp"-->
<!--    android:text="@string/scanned_text_will_appear_here"-->
<!--    android:textSize="18sp"-->
<!--    android:padding="16dp"-->
<!--    android:gravity="start"-->
<!--    android:background="@android:color/darker_gray"-->
<!--    android:textColor="@android:color/black"-->
<!--    app:layout_constraintTop_toTopOf="parent"-->
<!--    app:layout_constraintBottom_toTopOf="@id/saveButton"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintEnd_toEndOf="parent" />-->

<!--<Button-->
<!--    android:id="@+id/saveButton"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/save_ocr_text"-->
<!--    android:textSize="16sp"-->
<!--    android:textColor="@android:color/white"-->
<!--    android:layout_margin="16dp"-->
<!--    app:backgroundTint="@android:color/holo_blue_dark"-->
<!--    app:layout_constraintBottom_toBottomOf="parent"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintEnd_toEndOf="parent" />-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
