<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".ui.EditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/teal"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="Edit Text Page"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/editTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/black"
                android:gravity="top|start"
                android:hint="@string/edit_text_hint"
                android:inputType="textMultiLine"
                android:lines="15"
                android:scrollbars="vertical" />
        </LinearLayout>
    </ScrollView>


    <GridLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        android:columnCount="3"
        android:rowCount="1"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveOnlineBtnEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SaveOnline"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            app:layout_columnWeight="1"
            app:cornerRadius="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveWordBtnEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Word"
            android:backgroundTint="@color/light_blue"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:layout_columnWeight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveExcelBtnEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Excel"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:layout_columnWeight="1" />
    </GridLayout>

    <GridLayout
        android:id="@+id/buttonLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        android:columnCount="2"
        android:rowCount="1"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loadWordBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="95dp"
            android:backgroundTint="@color/teal"
            android:text="@string/load_word"
            android:textColor="@color/white"
            app:layout_columnWeight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loadExcelBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/scarletRed"
            android:text="@string/load_excel"
            android:textColor="@color/white"
            app:layout_columnWeight="1" />
    </GridLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>